# DouyinLiveRecorder-UI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  ffmpeg_install.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  bug_en.yml  question.yml  question_en.yml
config/: config.ini  config.ini.example
src/: config_loader.py  file_ops.py  logger.py  monitor.py  proxy.py  recorder.py  room.py  runtime.py  spider.py  stream.py  url_config.py  utils.py
src/http_clients/: async_http.py  sync_http.py
webui/: server.py
webui/static/: index.html
