[project]
name = "DouyinLiveRecorder"
version = "4.0.7"
description = "可循环值守和多人录制的抖音直播录制软件"
readme = "README.md"
authors = [{name = "Hmily"}]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "loguru>=0.7.3",
    "pycryptodome>=3.20.0",
    "distro>=1.9.0",
    "tqdm>=4.67.1",
    "httpx[http2]>=0.28.1",
    "PyExecJS>=1.5.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "psutil>=5.9.0"
]

[project.urls]
"Homepage" = "https://github.com/ihmily/DouyinLiveRecorder"
"Documentation" = "https://github.com/ihmily/DouyinLiveRecorder"
"Repository" = "https://github.com/ihmily/DouyinLiveRecorder"
"Issues" = "https://github.com/ihmily/DouyinLiveRecorder/issues"
